Bleh... automation and stuff.

--- a/app/welcome.ejs
+++ b/app/welcome.ejs
@@ -4,11 +4,15 @@
         <div class="cloudBottom"></div>
     </div>-->
     <div id="welcomeContent">
-        <img id="welcomeImageSeal" src="assets/images/WesterosSealCircle.png"/>
-        <span id="welcomeHeader">WELCOME TO WESTEROSCRAFT</span>
-        <span id="welcomeDescription">Our mission is to recreate the universe imagined by author George RR Martin in his fantasy series, A Song of Ice and Fire.  Through the collaborative effort of thousands of community members, we have sought to create Westeros as accurately and precisely as possible within Minecraft.  The world we are creating is yours to explore.  Journey from Dorne to Castle Black, and if you aren’t afraid, beyond the Wall itself, but best not delay.  As the words of House Stark ominously warn: Winter is Coming.</span>
+        <img id="welcomeImageSeal" src="assets/images/wa-logo.png"/>
+        <span id="welcomeHeader">WELCOME TO WORLDAUTOMATION.NET</span>
+        <span id="welcomeDescription" style="text-align:center;">
+		Our mission is to provide a fully submersive modded Minecraft experience including space travel, end game bases, cooperative and PVP gameplay. We achieve this with the use of several modifications, making the mod pack rather heavy to run sometimes for computers with low resources.
+		<br />
+		If you have issues, see our Discord or website for support.
+		</span>
         <br>
-        <span id="welcomeDescCTA">You are just a few clicks away from Westeros.</span>
+        <span id="welcomeDescCTA">You are just a few clicks away from WorldAutomation.Net</span>
         <button id="welcomeButton">
             <div id="welcomeButtonContent">
                 CONTINUE
