--- a/app/app.ejs
+++ b/app/app.ejs
@@ -1,7 +1,7 @@
 <html lang="en" xmlns="http://www.w3.org/1999/xhtml">
 <head>
     <meta charset="utf-8" http-equiv="Content-Security-Policy" content="script-src 'self'"/>
-    <title>Westeroscraft Launcher</title>
+    <title>WorldAutomation.Net Launcher</title>
     <script src="./assets/js/scripts/uicore.js"></script>
     <script src="./assets/js/scripts/uibinder.js"></script>
     <link type="text/css" rel="stylesheet" href="./assets/css/launcher.css">
@@ -38,8 +38,8 @@
     <div id="loadingContainer">
         <div id="loadingContent">
             <div id="loadSpinnerContainer">
-                <img id="loadCenterImage" src="assets/images/westeroscraftlogo1.png">
-                <img id="loadSpinnerImage" class="rotating" src="assets/images/westeroscraftlogo2.png">
+                <!--<img id="loadCenterImage" src="assets/images/wa-logo.png">-->
+                <img id="loadSpinnerImage" class="rotating" src="assets/images/wa-logo.png">
             </div>
         </div>
     </div>
