Bleh... automation and stuff.

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -107,12 +107,12 @@
                 </div>
             </div>
             <div id="settingsModsContainer">
-                <div id="settingsReqModsContainer">
+                <!--<div id="settingsReqModsContainer">
                     <div class="settingsModsHeader">Required Mods</div>
                     <div id="settingsReqModsContent">
 
                     </div>
-                </div>
+                </div>-->
                 <div id="settingsOptModsContainer">
                     <div class="settingsModsHeader">Optional Mods</div>
                     <div id="settingsOptModsContent">
@@ -265,7 +265,7 @@
                     <a href="https://github.com/worldautomation/wa-launcher" id="settingsAboutSourceButton" class="settingsAboutButton">Source (GitHub)</a>
                     <!-- The following must be included in third-party usage. -->
                     <a href="https://github.com/WesterosCraftCode/ElectronLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a>
-                    <a href="http://www.worldautomation.net" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
+                    <a href="https://www.worldautomation.net" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
                     <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">DevTools Console</a>
                 </div>
             </div>
