--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -112,15 +112,15 @@
                     <div id="settingsReqModsContent">
 
                     </div>
-                </div>-->
+                </div>
                 <div id="settingsOptModsContainer">
                     <div class="settingsModsHeader">Optional Mods</div>
                     <div id="settingsOptModsContent">
                         
                     </div>
-                </div>
+                </div>-->
                 <div id="settingsDropinModsContainer">
-                    <div class="settingsModsHeader">Drop-in Mods</div>
+                    <div class="settingsModsHeader">Optional Mods</div>
                     <button id="settingsDropinFileSystemButton">+ Add Mods <span id="settingsDropinRefreshNote">(F5 to Refresh)</span></button>
                     <div id="settingsDropinModsContent">
                         
