Bleh... automation and stuff.

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -112,9 +112,9 @@
                     <div id="settingsReqModsContent">
 
                     </div>
-                </div>
-                <div id="settingsOptModsContainer">
-                    <div class="settingsModsHeader">Optional Mods</div>
+                </div>-->
+                <!--<div id="settingsOptModsContainer">
+                    <div class="settingsModsHeader">Required Mods</div>
                     <div id="settingsOptModsContent">
                         
                     </div>
@@ -262,11 +262,9 @@
                     </div>
                 </div>
                 <div id="settingsAboutButtons">
-                    <a href="https://github.com/worldautomation/wa-launcher" id="settingsAboutSourceButton" class="settingsAboutButton">Source (GitHub)</a>
-                    <!-- The following must be included in third-party usage. -->
-                    <a href="https://github.com/WesterosCraftCode/ElectronLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a>
-                    <a href="https://www.worldautomation.net" id="settingsAboutSupportButton" class="settingsAboutButton">Support</a>
-                    <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">DevTools Console</a>
+                    <a href="https://www.worldautomation.net" id="settingsAboutSupportButton" class="settingsAboutButton">Website</a>
+                    <a href="https://discord.gg/V72fB6D" id="settingsAboutSupportButton" class="settingsAboutButton">Discord</a>
+                    <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">Developement Console</a>
                 </div>
             </div>
             <div class="settingsChangelogContainer">
@@ -280,7 +278,7 @@
                     </div>
                 </div>
                 <div class="settingsChangelogActions">
-                    <a class="settingsChangelogButton settingsAboutButton" href="#">View Release Notes on GitHub</a>
+                    <a class="settingsChangelogButton settingsAboutButton" href="#">View Full Release Notes on WorldAutomation.Net</a>
                 </div>
             </div>
         </div>
