Bleh... automation and stuff.

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -107,18 +107,6 @@
                 </div>
             </div>
             <div id="settingsModsContainer">
-                <!--<div id="settingsReqModsContainer">
-                    <div class="settingsModsHeader">Required Mods</div>
-                    <div id="settingsReqModsContent">
-
-                    </div>
-                </div>-->
-                <!--<div id="settingsOptModsContainer">
-                    <div class="settingsModsHeader">Required Mods</div>
-                    <div id="settingsOptModsContent">
-                        
-                    </div>
-                </div>-->
                 <div id="settingsDropinModsContainer">
                     <div class="settingsModsHeader">Optional Mods</div>
                     <button id="settingsDropinFileSystemButton">+ Add Mods <span id="settingsDropinRefreshNote">(F5 to Refresh)</span></button>
@@ -126,6 +114,18 @@
                         
                     </div>
                 </div>
+                <div id="settingsReqModsContainer">
+                    <div class="settingsModsHeader">Required Mods</div>
+                    <div id="settingsReqModsContent">
+
+                    </div>
+                </div>
+                <!--<div id="settingsOptModsContainer">
+                    <div class="settingsModsHeader">Required Mods</div>
+                    <div id="settingsOptModsContent">
+                        
+                    </div>
+                </div>-->
             </div>
         </div>
         <div id="settingsTabJava" class="settingsTab" style="display: none;">
