Added citation for third party usage...

--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -263,6 +263,7 @@
                 </div>
                 <div id="settingsAboutButtons">
                     <a href="https://www.worldautomation.net" id="settingsAboutSupportButton" class="settingsAboutButton">Website</a>
+					<a href="https://github.com/WesterosCraftCode/ElectronLauncher" id="settingsAboutSourceButton" class="settingsAboutButton">Original Source</a>
                     <a href="https://discord.gg/V72fB6D" id="settingsAboutSupportButton" class="settingsAboutButton">Discord</a>
                     <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">Developement Console</a>
                 </div>
