--- a/app/settings.ejs
+++ b/app/settings.ejs
@@ -268,7 +268,7 @@
                     <a href="#" id="settingsAboutDevToolsButton" class="settingsAboutButton">Developement Console</a>
                 </div>
             </div>
-            <div class="settingsChangelogContainer">
+            <!--<div class="settingsChangelogContainer">
                 <div class="settingsChangelogContent">
                     <div class="settingsChangelogHeadline">
                         <div class="settingsChangelogLabel">Release Notes</div>
@@ -281,7 +281,7 @@
                 <div class="settingsChangelogActions">
                     <a class="settingsChangelogButton settingsAboutButton" href="#">View Full Release Notes on WorldAutomation.Net</a>
                 </div>
-            </div>
+            </div>-->
         </div>
         <div id="settingsTabUpdate" class="settingsTab" style="display: none;">
             <div class="settingsTabHeader">
